@@ -717,7 +717,7 @@ A list of plugin fields which will not be exported while using :meth:`get_transl
 cache
 -----
 
-Default: True
+Default: :setting:`CMS_PLUGIN_CACHE`
 
 Is this plugin cacheable? If your plugin displays content based on the user or request or other
 dynamic properties set this to False.
