@@ -345,13 +345,24 @@ Since django CMS 2.0 plugins had their table names start with `cmsplugin_`. We r
 in 3.0 and will display a deprecation warning with the old and new table name. If your plugin uses
 south for migrations create a new empty schemamigration and rename the table by hand.
 
+Page caching
+============
+
+Pages are now cached by default.
+You can disable this behavior with :setting:`CMS_PAGE_CACHE`
+
 Placeholder caching
 ===================
 
 Plugins have a new default property: `cache=True`. If all plugins in a placeholder have set this to
-``True`` the whole placeholder and page will be cached if the toolbar is not in edit mode.
+``True`` the whole placeholder will be cached if the toolbar is not in edit mode.
 
 .. warning:: If your plugin is dynamic and processes current user or request data be sure to set ``cache=False``
+
+Plugin caching
+==============
+
+Plugins have a new attribute: ``cache=True``. Its default value can be configured with :setting:`CMS_PLUGIN_CACHE`.
 
 
 ********************
